--- a/packages/desktop/index.html
+++ b/packages/desktop/index.html
@@ -13,6 +13,25 @@
     <meta name="theme-color" content="#131010" media="(prefers-color-scheme: dark)" />
     <meta property="og:image" content="/social-share.png" />
     <meta property="twitter:image" content="/social-share.png" />
+    <style>
+      /* Prevent scrollIntoView effects in Tauri webview */
+      * { scroll-behavior: auto !important; }
+      body, html { overflow-anchor: none; }
+    </style>
+    <script>
+      // Override scrollIntoView to prevent frame shift in Tauri
+      (function() {
+        var origScrollIntoView = Element.prototype.scrollIntoView;
+        Element.prototype.scrollIntoView = function(options) {
+          var scrollY = window.scrollY;
+          var scrollX = window.scrollX;
+          origScrollIntoView.call(this, options);
+          requestAnimationFrame(function() {
+            window.scrollTo(scrollX, scrollY);
+          });
+        };
+      })();
+    </script>
     <script id="oc-theme-preload-script">
       ;(function () {
         var themeId = localStorage.getItem("opencode-theme-id")
