--- a/packages/desktop/index.html
+++ b/packages/desktop/index.html
@@ -14,22 +14,35 @@
     <meta property="og:image" content="/social-share.png" />
     <meta property="twitter:image" content="/social-share.png" />
     <style>
-      /* Prevent scrollIntoView effects in Tauri webview */
+      /* Prevent ALL scrolling in Tauri webview - use clip not hidden */
       * { scroll-behavior: auto !important; }
-      body, html { overflow-anchor: none; }
+      html, body, #root {
+        overflow: clip !important;
+        overscroll-behavior: none !important;
+      }
     </style>
     <script>
-      // Override scrollIntoView to prevent frame shift in Tauri
+      // Nuclear option: prevent ALL unwanted scrolling in Tauri
       (function() {
-        var origScrollIntoView = Element.prototype.scrollIntoView;
-        Element.prototype.scrollIntoView = function(options) {
-          var scrollY = window.scrollY;
-          var scrollX = window.scrollX;
-          origScrollIntoView.call(this, options);
-          requestAnimationFrame(function() {
-            window.scrollTo(scrollX, scrollY);
-          });
+        // 1. Disable scrollIntoView completely
+        Element.prototype.scrollIntoView = function() {};
+
+        // 2. Disable focus scrolling - force preventScroll on all focus calls
+        var origFocus = HTMLElement.prototype.focus;
+        HTMLElement.prototype.focus = function(options) {
+          origFocus.call(this, Object.assign({}, options, { preventScroll: true }));
         };
+
+        // 3. Block scroll events on window/document level
+        window.addEventListener('scroll', function(e) {
+          window.scrollTo(0, 0);
+        }, { capture: true, passive: false });
+
+        document.addEventListener('scroll', function(e) {
+          if (e.target === document || e.target === document.documentElement || e.target === document.body) {
+            window.scrollTo(0, 0);
+          }
+        }, { capture: true, passive: false });
       })();
     </script>
     <script id="oc-theme-preload-script">
